style: 使用 Double.valueOf 替代 new Double 装箱